# R-MoE-for-Clinical-Diagnostics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  RUN.ipynb  RUN.md  colab_runner.py  engine.py  image_handler.py
.github/workflows/: build-binaries.yml
docs/: ARCHITECTURE.md  COLLAB_GUIDE.md
include/: CliOutput.hpp  ExpertInterface.hpp
legacy/: CMakeLists.txt
legacy/src/: DiagnosticEngine.cpp  main.cpp
paper/: rmoe_paper.tex
prompts/: arll_system_prompt.txt  csr_system_prompt.txt  mpe_system_prompt.txt
rmoe/: agents.py
settings/: rmoe_settings.json
src/: DiagnosticEngine.cpp  main.cpp
tests/: test_agents.py
